add inbound and outbound messaging with mailgun

--- a/private/appconfig.ini
+++ b/private/appconfig.ini
@@ -38,3 +38,13 @@ ssl         = true
 [forms]
 formstyle   = bootstrap3_inline
 separator   =
+
+; 3rd party credentials
+[mailgun]
+sender_name       = web2py Starter App
+sender_id         = postmaster
+sender_domain     = PUT YOUR SANDBOX OR VERIFIED DOMAIN HERE
+private_api_key   = PUT YOUR PRIVATE KEY HERE
+public_api_key    = PUT YOUR PUBLIC KEY HERE
+
+[twilio]
