add application version to layout

--- a/private/appconfig.ini
+++ b/private/appconfig.ini
@@ -15,6 +15,7 @@ description = a cool new app
 keywords    = web2py, python, framework
 generator   = Web2py Web Framework
 company     = Company Inc
+version     = 0.3
 
 ; Host configuration
 [host]
