add myconf environment to appconfig

--- a/private/appconfig.ini
+++ b/private/appconfig.ini
@@ -1,51 +1,57 @@
+[environment]
+type = dev_ ; dev_, test_, stage_, prod_
+
 ; Admin user
 [admin_user]
-username    = admin
-password    = password
-email       = admin@domain.com
-first_name  = admin
-last_name   = user
-auth_groups = admin, operations, customer service
+username     = admin
+password     = password
+email        = admin@domain.com
+first_name   = Admin
+last_name    = User
+auth_groups  = admin, operations, customer service
 
 ; App configuration
 [app]
-name        = Starter
-author      = Your Name <you@example.com>
-description = a cool new app
-keywords    = web2py, python, framework
-generator   = Web2py Web Framework
-company     = Company Inc
-version     = 0.3
+name         = Starter
+author       = Your Name <you@example.com>
+description  = a cool new app
+keywords     = web2py, python, framework
+generator    = Web2py Web Framework
+company      = Maxim Capital Group
+version      = 0.3
 
 ; Host configuration
-[host]
-names       = localhost:*, 127.0.0.1:*, *:*, *
+[dev_host]
+names  = localhost:*, 127.0.0.1:*, *:*, *
 
 ; db configuration
-[db]
-uri         = sqlite://storage.sqlite
-migrate     = true
-pool_size   = 10 ; ignored for sqlite
+[dev_db]
+uri        = sqlite://storage.sqlite
+migrate    = true
+pool_size  = 10 ; ignored for sqlite
 
 ; smtp address and credentials
-[smtp]
-server      = smtp.gmail.com:587
-sender      = you@gmail.com
-login       = username:password
-tls         = true
-ssl         = true
+[dev_smtp]
+server  = smtp.gmail.com:587
+sender  = you@gmail.com
+login   = username:password
+tls     = true
+ssl     = true
 
 ; form styling
 [forms]
-formstyle   = bootstrap3_inline
-separator   =
+formstyle  = bootstrap3_inline
+separator  =
 
+;
 ; 3rd party credentials
+;
+
 [mailgun]
-sender_name       = web2py Starter App
-sender_id         = postmaster
-sender_domain     = PUT YOUR SANDBOX OR VERIFIED DOMAIN HERE
-private_api_key   = PUT YOUR PRIVATE KEY HERE
-public_api_key    = PUT YOUR PUBLIC KEY HERE
+sender_name      = web2py Starter App
+sender_id        = postmaster
+sender_domain    = PUT YOUR SANDBOX OR VERIFIED DOMAIN HERE
+private_api_key  = PUT YOUR PRIVATE KEY HERE
+public_api_key   = PUT YOUR PUBLIC KEY HERE
 
 [twilio]
