add app abbreviation to appconfig for browser tab

--- a/private/appconfig.ini
+++ b/private/appconfig.ini
@@ -13,6 +13,7 @@ auth_groups  = admin, operations, customer service
 ; App configuration
 [app]
 name         = Starter
+abbreviation = Starter
 author       = Your Name <you@example.com>
 description  = a cool new app
 keywords     = web2py, python, framework
