set company name to Company XYZ

--- a/private/appconfig.ini
+++ b/private/appconfig.ini
@@ -18,7 +18,7 @@ author       = Your Name <you@example.com>
 description  = a cool new app
 keywords     = web2py, python, framework
 generator    = Web2py Web Framework
-company      = Maxim Capital Group
+company      = Company XYZ
 version      = 0.3
 
 ; Host configuration
